--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "to-do-list",
   "version": "1.0.0",
   "description": "This is a simple to-do-list application",
-  "main": "app.js",
+  "main": "app.js", "type":"module",
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Krishan Kant Agarwal",
