--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list",
   "version": "1.0.0",
   "description": "This is a simple to-do-list application",
-  "main": "app.js", "type":"module",
+  "main": "app.js",
   "scripts": {
     "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
